[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Scenes/Spawner/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="FuelTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WarpTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="timeout" from="FuelTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="WarpTimer" to="." method="_on_WarpTimer_timeout"]
